# gctrpc/rpc.pb.gw.go
@@ -267,6 +267,42 @@ func local_request_GoCryptoTraderService_StopAutoTrade_0(ctx context.Context, ma
 	return msg, metadata, err
 }
 
+func request_GoCryptoTraderService_BuySOLToken_0(ctx context.Context, marshaler runtime.Marshaler, client GoCryptoTraderServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var (
+		protoReq BuySOLTokenRequest
+		metadata runtime.ServerMetadata
+	)
+	msg, err := client.BuySOLToken(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+}
+
+func local_request_GoCryptoTraderService_BuySOLToken_0(ctx context.Context, marshaler runtime.Marshaler, server GoCryptoTraderServiceServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var (
+		protoReq BuySOLTokenRequest
+		metadata runtime.ServerMetadata
+	)
+	msg, err := server.BuySOLToken(ctx, &protoReq)
+	return msg, metadata, err
+}
+
+func request_GoCryptoTraderService_StopSOLTokenMonitor_0(ctx context.Context, marshaler runtime.Marshaler, client GoCryptoTraderServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var (
+		protoReq StopAutoTradeRequest
+		metadata runtime.ServerMetadata
+	)
+	msg, err := client.StopSOLTokenMonitor(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+}
+
+func local_request_GoCryptoTraderService_StopSOLTokenMonitor_0(ctx context.Context, marshaler runtime.Marshaler, server GoCryptoTraderServiceServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var (
+		protoReq StopAutoTradeRequest
+		metadata runtime.ServerMetadata
+	)
+	msg, err := server.StopSOLTokenMonitor(ctx, &protoReq)
+	return msg, metadata, err
+}
+
 // RegisterGoCryptoTraderServiceHandlerServer registers the http handlers for service GoCryptoTraderService to "mux".
 // UnaryRPC     :call GoCryptoTraderServiceServer directly.
 // StreamingRPC :currently unsupported pending https://github.com/grpc/grpc-go/issues/906.
@@ -452,6 +488,46 @@ func RegisterGoCryptoTraderServiceHandlerServer(ctx context.Context, mux *runtim
 			return
 		}
 		forward_GoCryptoTraderService_StopAutoTrade_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+	})
+	mux.Handle(http.MethodPost, pattern_GoCryptoTraderService_BuySOLToken_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		annotatedContext, err := runtime.AnnotateIncomingContext(ctx, mux, req, "/gctrpc.GoCryptoTraderService/BuySOLToken", runtime.WithHTTPPathPattern("/v1/buy_sol_token"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_GoCryptoTraderService_BuySOLToken_0(annotatedContext, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		forward_GoCryptoTraderService_BuySOLToken_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+	})
+	mux.Handle(http.MethodPost, pattern_GoCryptoTraderService_StopSOLTokenMonitor_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		annotatedContext, err := runtime.AnnotateIncomingContext(ctx, mux, req, "/gctrpc.GoCryptoTraderService/StopSOLTokenMonitor", runtime.WithHTTPPathPattern("/v1/stop_sol_token_monitor"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_GoCryptoTraderService_StopSOLTokenMonitor_0(annotatedContext, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		forward_GoCryptoTraderService_StopSOLTokenMonitor_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 	})
 
 	return nil
@@ -646,29 +722,67 @@ func RegisterGoCryptoTraderServiceHandlerClient(ctx context.Context, mux *runtim
 		}
 		forward_GoCryptoTraderService_StopAutoTrade_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 	})
+	mux.Handle(http.MethodPost, pattern_GoCryptoTraderService_BuySOLToken_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		annotatedContext, err := runtime.AnnotateContext(ctx, mux, req, "/gctrpc.GoCryptoTraderService/BuySOLToken", runtime.WithHTTPPathPattern("/v1/buy_sol_token"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_GoCryptoTraderService_BuySOLToken_0(annotatedContext, inboundMarshaler, client, req, pathParams)
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		forward_GoCryptoTraderService_BuySOLToken_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+	})
+	mux.Handle(http.MethodPost, pattern_GoCryptoTraderService_StopSOLTokenMonitor_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		annotatedContext, err := runtime.AnnotateContext(ctx, mux, req, "/gctrpc.GoCryptoTraderService/StopSOLTokenMonitor", runtime.WithHTTPPathPattern("/v1/stop_sol_token_monitor"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_GoCryptoTraderService_StopSOLTokenMonitor_0(annotatedContext, inboundMarshaler, client, req, pathParams)
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		forward_GoCryptoTraderService_StopSOLTokenMonitor_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+	})
 	return nil
 }
 
 var (
-	pattern_GoCryptoTraderService_GetInfo_0         = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "getinfo"}, ""))
-	pattern_GoCryptoTraderService_GetRPCEndpoints_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "getrpcendpoints"}, ""))
-	pattern_GoCryptoTraderService_GetAccounts_0     = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "getaccounts"}, ""))
-	pattern_GoCryptoTraderService_GetTokenPrice_0   = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "gettokenprice"}, ""))
-	pattern_GoCryptoTraderService_Crypto_0          = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "crypto"}, ""))
-	pattern_GoCryptoTraderService_TransferSOL_0     = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "transfer_sol"}, ""))
-	pattern_GoCryptoTraderService_TransferToken_0   = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "transfer_token"}, ""))
-	pattern_GoCryptoTraderService_StartAutoTrade_0  = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "start_auto_trade"}, ""))
-	pattern_GoCryptoTraderService_StopAutoTrade_0   = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "stop_auto_trade"}, ""))
+	pattern_GoCryptoTraderService_GetInfo_0             = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "getinfo"}, ""))
+	pattern_GoCryptoTraderService_GetRPCEndpoints_0     = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "getrpcendpoints"}, ""))
+	pattern_GoCryptoTraderService_GetAccounts_0         = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "getaccounts"}, ""))
+	pattern_GoCryptoTraderService_GetTokenPrice_0       = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "gettokenprice"}, ""))
+	pattern_GoCryptoTraderService_Crypto_0              = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "crypto"}, ""))
+	pattern_GoCryptoTraderService_TransferSOL_0         = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "transfer_sol"}, ""))
+	pattern_GoCryptoTraderService_TransferToken_0       = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "transfer_token"}, ""))
+	pattern_GoCryptoTraderService_StartAutoTrade_0      = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "start_auto_trade"}, ""))
+	pattern_GoCryptoTraderService_StopAutoTrade_0       = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "stop_auto_trade"}, ""))
+	pattern_GoCryptoTraderService_BuySOLToken_0         = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "buy_sol_token"}, ""))
+	pattern_GoCryptoTraderService_StopSOLTokenMonitor_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "stop_sol_token_monitor"}, ""))
 )
 
 var (
-	forward_GoCryptoTraderService_GetInfo_0         = runtime.ForwardResponseMessage
-	forward_GoCryptoTraderService_GetRPCEndpoints_0 = runtime.ForwardResponseMessage
-	forward_GoCryptoTraderService_GetAccounts_0     = runtime.ForwardResponseMessage
-	forward_GoCryptoTraderService_GetTokenPrice_0   = runtime.ForwardResponseMessage
-	forward_GoCryptoTraderService_Crypto_0          = runtime.ForwardResponseMessage
-	forward_GoCryptoTraderService_TransferSOL_0     = runtime.ForwardResponseMessage
-	forward_GoCryptoTraderService_TransferToken_0   = runtime.ForwardResponseMessage
-	forward_GoCryptoTraderService_StartAutoTrade_0  = runtime.ForwardResponseMessage
-	forward_GoCryptoTraderService_StopAutoTrade_0   = runtime.ForwardResponseMessage
+	forward_GoCryptoTraderService_GetInfo_0             = runtime.ForwardResponseMessage
+	forward_GoCryptoTraderService_GetRPCEndpoints_0     = runtime.ForwardResponseMessage
+	forward_GoCryptoTraderService_GetAccounts_0         = runtime.ForwardResponseMessage
+	forward_GoCryptoTraderService_GetTokenPrice_0       = runtime.ForwardResponseMessage
+	forward_GoCryptoTraderService_Crypto_0              = runtime.ForwardResponseMessage
+	forward_GoCryptoTraderService_TransferSOL_0         = runtime.ForwardResponseMessage
+	forward_GoCryptoTraderService_TransferToken_0       = runtime.ForwardResponseMessage
+	forward_GoCryptoTraderService_StartAutoTrade_0      = runtime.ForwardResponseMessage
+	forward_GoCryptoTraderService_StopAutoTrade_0       = runtime.ForwardResponseMessage
+	forward_GoCryptoTraderService_BuySOLToken_0         = runtime.ForwardResponseMessage
+	forward_GoCryptoTraderService_StopSOLTokenMonitor_0 = runtime.ForwardResponseMessage
 )
